# mac-tg-bot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: monitor.yml
data/: seen_products.json
src/: config.py  main.py
src/filters/: __init__.py  filters.py
src/models/: __init__.py  product.py
src/notifications/: __init__.py  telegram.py
src/scrapers/: __init__.py  amazon.py  apple_refurbished.py  backmarket.py  base.py  imac_store.py  refurbed.py  swappie.py
src/storage/: __init__.py  json_storage.py
tests/: test_filters.py  test_price_change.py  test_product.py  test_storage.py
