[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mac-tg-bot"
version = "1.0.0"
description = "Telegram bot that monitors MacBook prices from refurbished and new sellers"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

[project.scripts]
mac-tg-bot = "src.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]
ignore = ["UP017"]
